--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Cedarville+Cursive&family=Playpen+Sans&display=swap" rel="stylesheet">
     
 </head>
 <body>
@@ -66,8 +66,8 @@
                <div class="tab-contents active-tab" id="achievements">
                   <ul>
                     <li><span>2021</span><br>Went to regionals in track and swim</li>
-                    <li><span>2022</span><br>Went to regionals in track and cross-country, went to state in swim</li>
-                    <li><span>2022</span><br>Went to middle school state in track</li>
+                    <li><span>2022</span><br>Went to regionals in track and cross-country, middle school state in track, and high school state in swim</li>
+                    <li><span>2023</span><br>Went to middle school state and high school state in cross-country</li>
                   </ul>
               </div>
               <div class="tab-contents" id="experience">
